# RAG-LLM

./: .gitignore  README.md  config.py  document_loader.py  embeddings.py  justfile  main.py  pyproject.toml  rag_pipeline.py  requirements.txt
student_assistant/: CLI.py  db.py  document_loader.py  main.py  project.py  prompts.py  rag_graph.py  vector_store.py
student_assistant/core/: config.py  logging.py
student_assistant/rag/: document_loader.py  memory.py  rag_graph.py  vector_store.py
student_assistant/rag/graph/: nodes.py  rag_graph.py  tools.py
