[project]
name = "student-assistant"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.0.12",
    "inquirerpy>=0.3.4",
    "langchain>=0.3.25",
    "langchain-chroma>=0.2.4",
    "langchain-community>=0.3.24",
    "langchain-openai>=0.3.19",
    "langgraph>=0.4.8",
    "langgraph-checkpoint-sqlite>=2.0.10",
    "pillow>=11.2.1",
    "pydantic-settings>=2.9.1",
    "pypdf>=5.6.0",
    "rapidocr-onnxruntime>=1.4.4",
    "rich>=14.0.0",
]
